testdata/baselines/reference/submodule/conformance/jsdocTemplateTag.errors.txt
forgot.js(1,1): error TS8004: Type parameter declarations can only be used in TypeScript files.
forgot.js(2,12): error TS8010: Type annotations can only be used in TypeScript files.
forgot.js(8,15): error TS8004: Type parameter declarations can only be used in TypeScript files.
forgot.js(11,12): error TS8010: Type annotations can only be used in TypeScript files.
forgot.js(13,14): error TS2552: Cannot find name 'function'. Did you mean 'Function'?
forgot.js(13,14): error TS8010: Type annotations can only be used in TypeScript files.
forgot.js(23,1): error TS2322: Type '(keyframes: Keyframe[] | PropertyIndexedKeyframes) => void' is not assignable to type '(keyframes: Keyframe[] | PropertyIndexedKeyframes, options?: number | KeyframeAnimationOptions) => Animation'.
  Type 'void' is not assignable to type 'Animation'.


==== forgot.js (7 errors) ====
    /**
    ~~~
     * @param {T} a
    ~~~~~~~~~~~~~~~
               ~
!!! error TS8010: Type annotations can only be used in TypeScript files.
     * @template T
    ~~~~~~~~~~~~~~
     */
    ~~~
    function f(a) {
    ~~~~~~~~~~~~~~~
        return () => a
    ~~~~~~~~~~~~~~~~~~
    }
    ~
!!! error TS8004: Type parameter declarations can only be used in TypeScript files.
    let n = f(1)()
                  
    
    
    /**
    ~~~
     * @param {T} a
    ~~~~~~~~~~~~~~~
               ~
!!! error TS8010: Type annotations can only be used in TypeScript files.
     * @template T
    ~~~~~~~~~~~~~~
     * @returns {function(): T}
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~
                 ~~~~~~~~
!!! error TS2552: Cannot find name 'function'. Did you mean 'Function'?
!!! related TS2728 lib.es5.d.ts:--:--: 'Function' is declared here.
                 ~~~~~~~~
!!! error TS8010: Type annotations can only be used in TypeScript files.
     */
    ~~~
    function g(a) {
    ~~~~~~~~~~~~~~~
        return () => a
    ~~~~~~~~~~~~~~~~~~
    }
    ~
!!! error TS8004: Type parameter declarations can only be used in TypeScript files.
    let s = g('hi')()
    
    /**
     * @param {Array.<Object>} keyframes - Can't look up types on Element since it's a global in another file. (But it shouldn't crash).
     */
    Element.prototype.animate = function(keyframes) {};
    ~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2322: Type '(keyframes: Keyframe[] | PropertyIndexedKeyframes) => void' is not assignable to type '(keyframes: Keyframe[] | PropertyIndexedKeyframes, options?: number | KeyframeAnimationOptions) => Animation'.
!!! error TS2322:   Type 'void' is not assignable to type 'Animation'.
    